--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "node-sass": "^7.0.1",
     "nuxt": "^2.15.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
