--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "node": "nodemon server nodemon backend/index.js --watch server",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -11,13 +12,18 @@
   },
   "dependencies": {
     "core-js": "^3.19.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.5",
     "node-sass": "^7.0.1",
+    "nodemon": "^2.0.19",
     "nuxt": "^2.15.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "y": "^0.3.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
