--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-/config/.env
+/backend/config/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
