--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
