--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "test",
+  "name": "groupomania",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "node": "nodemon server nodemon backend/index.js --watch server",
+    "node": "nodemon server nodemon backend/index.js --watch server ",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -11,6 +11,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "core-js": "^3.19.3",
     "dotenv": "^16.0.1",
@@ -19,6 +20,7 @@
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
     "nuxt": "^2.15.2",
+    "validator": "^13.7.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
