--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "scripts": {
     "node": "nodemon server nodemon backend/index.js --watch server ",
-  
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -14,9 +13,11 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "core-js": "^3.19.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.5",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
