--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^6.4.5",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
