--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "testnode": "node index.js",
     "node": "nodemon server nodemon backend/index.js --watch server ",
     "dev": "nuxt",
     "build": "nuxt build",
@@ -15,11 +16,15 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.19.3",
+    "cors": "^2.8.5",
+    "cucumber": "^6.0.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^6.4.5",
+    "multer": "^2.0.0-rc.1",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.19",
     "nuxt": "^2.15.2",
