--- a/package.json
+++ b/package.json
@@ -14,20 +14,31 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "core-js": "^3.19.3",
     "cors": "^2.8.5",
     "cucumber": "^6.0.7",
+    "dicer": "^0.3.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "fix-path": "^4.0.0",
     "fs": "^0.0.1-security",
+    "fs-temp": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^6.4.5",
-    "multer": "^2.0.0-rc.1",
+    "multer": "^1.4.5-lts.1",
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.19",
+    "node-stream": "^1.7.0",
+    "nodemon": "^2.0.6",
     "nuxt": "^2.15.2",
+    "promisify": "^0.0.3",
+    "promisify-node": "^0.5.0",
+    "react-scripts": "^3.4.1",
+    "util.promisify": "^1.1.1",
+    "util.promisify-all": "^1.0.2",
     "validator": "^13.7.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
