--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-temp": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
+    "mime-detect": "^1.1.4",
     "mongoose": "^6.4.5",
     "multer": "^1.4.5-lts.1",
     "node-sass": "^7.0.1",
