--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cucumber": "^6.0.7",
     "dicer": "^0.3.1",
     "dotenv": "^16.0.1",
+    "es6-promisify": "^7.0.0",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "fix-path": "^4.0.0",
@@ -38,6 +39,8 @@
     "promisify": "^0.0.3",
     "promisify-node": "^0.5.0",
     "react-scripts": "^3.4.1",
+    "stream": "^0.0.2",
+    "util": "^0.12.4",
     "util.promisify": "^1.1.1",
     "util.promisify-all": "^1.0.2",
     "validator": "^13.7.0",
