--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mime-detect": "^1.1.4",
     "mongoose": "^6.4.5",
     "multer": "^1.4.5-lts.1",
+    "node": "^18.7.0",
     "node-sass": "^7.0.1",
     "node-stream": "^1.7.0",
     "nodemon": "^2.0.6",
