--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
-    "core-js": "^3.19.3",
+    "core-js": "^3.24.1",
     "cors": "^2.8.5",
-    "cucumber": "^6.0.7",
-    "dicer": "^0.3.1",
     "dotenv": "^16.0.1",
     "es6-promisify": "^7.0.0",
     "express": "^4.18.1",
@@ -28,19 +27,18 @@
     "fix-path": "^4.0.0",
     "fs": "^0.0.1-security",
     "fs-temp": "^2.0.0",
+    "glob-parent": "^5.1.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mime-detect": "^1.1.4",
     "mongoose": "^6.4.5",
     "multer": "^1.4.4-lts.1",
     "node": "^16.16.0",
-    "node-sass": "^7.0.1",
     "node-stream": "^1.7.0",
     "nodemon": "^2.0.6",
-    "nuxt": "^2.15.2",
-    "promisify": "^0.0.3",
+    "nuxt": "^2.12.2",
     "promisify-node": "^0.5.0",
-    "stream": "^0.0.2",
     "util": "^0.12.4",
     "util.promisify": "^1.1.1",
     "util.promisify-all": "^1.0.2",
@@ -49,7 +47,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuetify": "^2.6.1",
-    "webpack": "^4.46.0",
+    "webpack": "^5.74.0",
     "y": "^0.3.2"
   },
   "devDependencies": {
