--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.24.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "emoji-mart-vue-2": "^2.7.9",
     "es6-promisify": "^7.0.0",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
