=> version final rendu ==>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+backend/images
+client
+
 # Created by .ignore support plugin (hsz.mobi)
+
 ### Node template
 # Logs
+
 /logs
 *.log
 npm-debug.log*
